--- a/src/app/quotes/quotes.component.css
+++ b/src/app/quotes/quotes.component.css
@@ -1,59 +1,3 @@
-/* h1{
-  font-family: 'Special Elite', cursive;
-  color: white;
-  text-align: center;
-  font-weight: bolder;
-  padding-bottom: 2%;
-  padding-top: 2%;
-}
-h4{
-  font-family: 'Architects Daughter', cursive;
-}
-span{
-  font-family: 'Architects Daughter', cursive;
-}
-.overlay{
-  background-color:rgba(0, 225, 255, 0.301);
-  border-radius: 5px;
-  margin-top:4%;
-  margin-left: 4%;
-  margin-right: 4%;
-  margin-bottom: 5%;
-  padding-top: 1%;
-  padding-left: 1%;
-  padding-bottom: 5%;
-}
-#name{
-  color:rgb(43, 214, 0);
-  font-weight: 700;
-}
-.all-cards{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-#quotes-button{
-  float: right;
-}
-.card{
-  margin-bottom: 2%;
-  background-color: aliceblue;
-  box-shadow: 2px 2px 3px 2px black;
-}
-#date{
-  float: right;
-  font-size: 14px;
-}
-#datecolor{
-  color: green;
-  font-weight: 700;
-}
-.card-text{
-  font-family: 'Handlee', cursive;
-  font-weight: 570;
-  font-size: 18px;
-} */
-
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
@@ -127,48 +71,6 @@ a {
     margin-top: 10px;
 }
 
-
-/* ---- Switch button ---- */
-
-
-/*.icon-switch {
-	width: 100%;
-}
-
-.card {
-	float: right;
-	font-size: 20px;
-	margin-right: 20px;
-	display: inline-block;
-}
-
-.list {
-	float: right;
-	font-size: 20px;
-	display: inline-block;
-	margin-right: 5px;
-}
-
-.active {
-	color: #0990aa;
-}*/
-
-.Switch {
-    position: relative;
-    float: right;
-    font-weight: bold;
-    color: #fff;
-    width: 60px;
-    height: 30px;
-    border-radius: 15px;
-    background: #0990aa;
-    cursor: pointer;
-    -webkit-transition: background-color 0.3s ease-in-out;
-    -moz-transition: background-color 0.3s ease-in-out;
-    -o-transition: background-color 0.3s ease-in-out;
-    -ms-transition: background-color 0.3s ease-in-out;
-}
-
 .Switch.list {
     background: #fd7117;
 }
@@ -186,21 +88,6 @@ a {
 
 .Switch span.off {
     left: 6px;
-}
-
-.Switch .Toggle {
-    position: absolute;
-    right: 0;
-    top: 2px;
-    width: 26px;
-    height: 26px;
-    border-radius: 13px;
-    background: #fff;
-    z-index: 999;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
 }
 
 .Switch.list .Toggle {
@@ -227,6 +114,8 @@ a {
 .container {
     border: 1px solid #efefef;
     padding: 15px;
+    background-color: green;
+    width: 100%;
 }
 
 .bg {
@@ -298,7 +187,7 @@ a {
 #c_stars span {
     /* white star bottom */
     display: inline-block;
-    background: url('https://s15.postimg.org/igu2opvh3/stars.png') 0 -12px repeat-x;
+    /* background: url('https://s15.postimg.org/igu2opvh3/stars.png') 0 -12px repeat-x; */
     width: 60px;
     height: 12px;
 }
@@ -449,7 +338,7 @@ a {
 #c_stars span {
     /* white star bottom */
     display: inline-block;
-    background: url('https://images.pexels.com/photos/3727771/pexels-photo-3727771.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500') 0 -12px repeat-x;
+    /* background: url('https://images.pexels.com/photos/3727771/pexels-photo-3727771.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500') 0 -12px repeat-x; */
     width: 60px;
     height: 12px;
 }
